force-apps/deploy/main/default/objects/xProperty__x/xProperty__x.object-meta.xml
<CustomObject>
    <description>public$property__c</description>
    <externalDataSource>OData_Demo</externalDataSource>
    <externalName>public$property__c</externalName>
    <label>xProperty</label>
    <pluralLabel>xProperties</pluralLabel>
</CustomObject>