force-apps/deploy/main/default/objects/xProperty__x/fields/address_c__c.field-meta.xml
<CustomField>
    <fullName>address_c__c</fullName>
    <description>address__c</description>
    <externalDeveloperName>address__c</externalDeveloperName>
    <label>address__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>