force-apps/deploy/main/default/objects/xProperty__x/fields/baths_c__c.field-meta.xml
<CustomField>
    <fullName>baths_c__c</fullName>
    <description>baths__c</description>
    <externalDeveloperName>baths__c</externalDeveloperName>
    <label>baths__c</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>