force-apps/deploy/main/default/objects/xProperty__x/fields/beds_c__c.field-meta.xml
<CustomField>
    <fullName>beds_c__c</fullName>
    <description>beds__c</description>
    <externalDeveloperName>beds__c</externalDeveloperName>
    <label>beds__c</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>