force-apps/deploy/main/default/objects/xProperty__x/fields/broker_c__c.field-meta.xml
<CustomField>
    <fullName>broker_c__c</fullName>
    <description>broker__c</description>
    <externalDeveloperName>broker__c</externalDeveloperName>
    <label>broker__c</label>
    <length>18</length>
    <referenceTo>xBroker__x</referenceTo>
    <relationshipLabel>xProperties</relationshipLabel>
    <relationshipName>xProperties</relationshipName>
    <type>ExternalLookup</type>
</CustomField>