force-apps/deploy/main/default/objects/xProperty__x/fields/city_c__c.field-meta.xml
<CustomField>
    <fullName>city_c__c</fullName>
    <description>city__c</description>
    <externalDeveloperName>city__c</externalDeveloperName>
    <label>city__c</label>
    <length>50</length>
    <type>Text</type>
</CustomField>