force-apps/deploy/main/default/objects/xProperty__x/fields/description_c__c.field-meta.xml
<CustomField>
    <fullName>description_c__c</fullName>
    <description>description__c</description>
    <externalDeveloperName>description__c</externalDeveloperName>
    <label>description__c</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>