force-apps/deploy/main/default/objects/xProperty__x/fields/location_latitude_s__c.field-meta.xml
<CustomField>
    <fullName>location_latitude_s__c</fullName>
    <description>location__latitude__s</description>
    <externalDeveloperName>location__latitude__s</externalDeveloperName>
    <label>location__latitude__s</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>