force-apps/deploy/main/default/objects/xProperty__x/fields/location_longitude_s__c.field-meta.xml
<CustomField>
    <fullName>location_longitude_s__c</fullName>
    <description>location__longitude__s</description>
    <externalDeveloperName>location__longitude__s</externalDeveloperName>
    <label>location__longitude__s</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>