force-apps/deploy/main/default/objects/xProperty__x/fields/price_c__c.field-meta.xml
<CustomField>
    <fullName>price_c__c</fullName>
    <description>price__c</description>
    <externalDeveloperName>price__c</externalDeveloperName>
    <label>price__c</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>