force-apps/deploy/main/default/objects/xProperty__x/fields/state_c__c.field-meta.xml
<CustomField>
    <fullName>state_c__c</fullName>
    <description>state__c</description>
    <externalDeveloperName>state__c</externalDeveloperName>
    <label>state__c</label>
    <length>20</length>
    <type>Text</type>
</CustomField>