force-apps/deploy/main/default/objects/xProperty__x/fields/thumbnail_c__c.field-meta.xml
<CustomField>
    <fullName>thumbnail_c__c</fullName>
    <description>thumbnail__c</description>
    <externalDeveloperName>thumbnail__c</externalDeveloperName>
    <label>thumbnail__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>