force-apps/deploy/main/default/objects/xProperty__x/fields/title_c__c.field-meta.xml
<CustomField>
    <fullName>title_c__c</fullName>
    <description>title__c</description>
    <externalDeveloperName>title__c</externalDeveloperName>
    <label>title__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>