force-apps/deploy/main/default/objects/xProperty__x/fields/zip_c__c.field-meta.xml
<CustomField>
    <fullName>zip_c__c</fullName>
    <description>zip__c</description>
    <externalDeveloperName>zip__c</externalDeveloperName>
    <label>zip__c</label>
    <length>10</length>
    <type>Text</type>
</CustomField>