force-apps/deploy/main/default/objects/xProperty__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>name__c</columns>
    <columns>title_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>